<resources>
    <string name="app_name">AuctionApp</string>
    <string name="product_desc">This is the product detail</string>
    <string name="product_title">Product Title</string>
    <string name="product_image">Product Image</string>
    <string name="product_count_down">Count Down</string>
    <string name="label_time_picker">Choose Time</string>
    <string name="label_date_picker">Choose Date</string>
    <string name="ok">OK</string>
    <string name="label_image_picker">Choose Image</string>
    <string name="button_submit">Submit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="label_product_type">Product Type</string>
    <string name="action_settings">Settings</string>
    <string name="product_amount">%1$d$</string>
    <string name="label_submit_bid">Submit Bid</string>
    <string name="bidding_time_warning">Bidding will only be available at Time Set by Bidder</string>
    <string name="nav_buy">Buy</string>
    <string name="nav_sell">Sell</string>
    <string name="nav_my_bookings">My Bookings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
