<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_buy"
            android:icon="@drawable/ic_buy"
            android:title="@string/nav_buy"/>
        <item
            android:id="@+id/nav_sell"
            android:icon="@drawable/ic_menu_sell"
            android:title="@string/nav_sell"/>
        <item
            android:id="@+id/nav_my_booking"
            android:icon="@drawable/ic_menu_bookings"
            android:title="@string/nav_my_bookings"/>
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send"/>
        </menu>
    </item>

</menu>
